Breaking News: Add text overflow clipping, fix text sizes, fix hover state, and generally try to make things line up with the rest of the site.

--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -2468,12 +2468,6 @@ Community Highlights and Events
       height: 82px;
       border-top: 1px solid #282827; } }
 
-#breaking-news-banner {
-  display: none; }
-  @media screen and (min-width: 768px) {
-    #breaking-news-banner {
-      display: block; } }
-
 .header__logo {
   float: left;
   display: block;
@@ -3654,12 +3648,6 @@ Link posts contain a link to an external site. They can also optionally have a f
   color: #ffffff !important;
   text-transform: uppercase;
   cursor: pointer;
-  -webkit-border-radius: 1em;
-  -moz-border-radius: 1em;
-  -ms-border-radius: 1em;
-  -o-border-radius: 1em;
-  -border-radius: 1em;
-  border-radius: 1em;
   display: none; }
   .posts-pagination--load-more:hover, .posts-pagination--load-more:focus {
     background-color: #aa1c20;
@@ -5000,9 +4988,27 @@ category: Components
       height: auto;
       overflow: auto; } }
 
-.breaking-news {
+#breaking-news-banner {
   width: 100%;
-  overflow: auto; }
+  padding: .4em 20px;
+  font-size: 16px; }
+  #breaking-news-banner .breaking-news-item {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 1400px;
+    margin: 0 auto;
+    display: block; }
+    #breaking-news-banner .breaking-news-item .title {
+      color: #f5ed7f;
+      text-transform: uppercase;
+      font-size: .9em; }
+    #breaking-news-banner .breaking-news-item .excerpt {
+      font-size: 1em; }
+    #breaking-news-banner .breaking-news-item * {
+      display: inline; }
+    #breaking-news-banner .breaking-news-item a:hover {
+      color: #f5ed7f; }
 
 /*doc
 ---
